--- a/templates/form_identifier.html
+++ b/templates/form_identifier.html
@@ -17,7 +17,7 @@
 
         <div class="bloc">
             <label for="mdp">Mot de passe* :</label>
-            <input type="text" id="mdp" name="user_mdp" required>
+            <input type="password" id="mdp" name="user_mdp" required>
         </div>
 
         <div id="button_send">
