--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block titre %} Lignes {% endblock %}
+{% block titre %} Breizhibus {% endblock %}
 
 {% block milieu %}
 <h2>Consulter les lignes</h2>
@@ -27,15 +27,3 @@
 </form>
 
 {% endblock %}
-
-
-
-<!-- 
-{% for ligne in list_lignes %}
-<li>{{ ligne }}</li>
-{% endfor %} 
-<li>{{ donateur["nom"] }} {{ donateur["prenom"] }} {{ donateur["sang"] }} {{ donateur["mail"] }}
-                    </li>
-                    <option value="paca">Provence-Alpes-Côte d'Azur</option>
-
--->
