--- a/templates/suppression.html
+++ b/templates/suppression.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block titre %}
-Modification de bus
+Suppression de bus
 {% endblock %}
 
 
 {% block milieu %}
 <h2>Gestion des bus</h2>
 
-<p>Le bus {{ num }} a bien été modifié </p>
+<p>Le bus {{ id_bus }} a bien été supprimé </p>
 
 {% endblock %}
