--- a/templates/arrets.html
+++ b/templates/arrets.html
@@ -20,5 +20,7 @@ Arrêts
     {% endfor %}
 
 </table>
-
+<div id="button_retour">
+    <button><a href="{{url_for('afficher_lignes')}}">Retour</a></button>
+</div>
 {% endblock %}
